<resources>
    <string name="app_name">TindNet</string>
    <!-- textviews de titulos -->
    <string name="text_intro_title">Encuentra a tu Empresa Perfecta con nosotros</string>
    <string name="text_intro_subtitle">Únete a nosotros y relaciónate con multitud de empresas y clientes</string>
    <string name="text_register_title">Regístrate</string>
    <!-- textviews -->
    <string name="text_regist_soy_empresa">Soy Empresa</string>
    <string name="text_regist_soy_cliente">Soy Cliente</string>
    <string name="text_acept_politic">Acepto la Política de privacidad y Términos de uso</string>
    <string name="text_registr_with">O regístrate con</string>
    <!-- textviews hint -->
    <string name="text_hint_name">Nombre</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Contraseña</string>
    <string name="text_hint_repeat_password">Confirma tu contraseña</string>
    <!-- buttons -->
    <string name="text_bt_continue">Continuar</string>
    <string name="text_bt_login">Acceder</string>
    <string name="text_bt_register">Registrarse</string>
    <string name="text_bt_google">Google</string>
    <string name="text_tb_facebook">Facebook</string>
    <!-- content description -->
    <string name="cd_iv_logo_ofic_intro">Imágen del logo TindNet con la imagen de una oficina en color claro de fondo</string>
    <!-- sharedpreferences -->
    <string name="prefs_file">com.marcdevelopez.tindnet.PREFERENCE_FILE_KEY</string>
    <string name="prefs_email">email</string>
    <string name="prefs_provider">provider</string>
    <string name="intro_shown">introShow</string>
    <string name="soy_cliente">soy_cliente</string>
    <!-- bundles -->
    <string name="intro_shown_checked">intro_shown_checked</string>
    <!-- firebase -->
    <string name="default_web_client_id">457992766803-rjru6lpoopu34c91b263vb4430lmreuh.apps.googleusercontent.com</string>
    <!-- showalert -->
    <string name="fallo_autenticacion_password">Falló la autenticación, vuelve a intentarlo.</string>
    <string name="fallo_campos_email_password_vacios">Los campos Email y Contraseña son obligatorios.</string>
    <!-- menus -->
    <string name="menu_favorite">Favoritos</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Búsqueda</string>

    <string name="title_activity_home_client">HomeClientActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home_company">HomeCompanyActivity</string>
    <string name="title_activity_home_prueba">HomePrueba</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>